src/objects/KS_Autorizacion_Oferta__c.object
<CustomObject>
    <description>KAIZENSTEP. ACTIVO. Objeto donde se almacenan los registros que controlan las aprobaciones por serie</description>
    <fields>
        <fullName>KS_Familia__c</fullName>
        <label>Familia</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Familia</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Niv1_LimiteExtra__c</fullName>
        <label>Nivel 1, Límite Extra</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Niv1_LimiteMSC__c</fullName>
        <label>Nivel 1, Límite MSC</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Niv1_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nivel 1, Usuario</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Autorizaciones_Oferta_Niv1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Niv2_LimiteExtra__c</fullName>
        <label>Nivel 2, Límite Extra</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Niv2_LimiteMSC__c</fullName>
        <label>Nivel 2, Límite MSC</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Niv2_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nivel 2, Usuario</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Autorizaciones_Oferta_Niv2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Niv3_Categoria__c</fullName>
        <formula>TEXT( KS_Niv3_User__r.KS_Responsable_Nivel_3__c )</formula>
        <label>Nivel 3, Categoría</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Niv3_LimiteExtra__c</fullName>
        <label>Nivel 3, Límite Extra</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Niv3_LimiteMSC__c</fullName>
        <label>Nivel 3, Límite MSC</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Niv3_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nivel 3, Usuario</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Autorizaciones_Oferta_Niv3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Organizacion_Ventas__c</fullName>
        <label>Organización de ventas</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Organizacion_de_ventas</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Pais__c</fullName>
        <label>Pais</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ISOCountryCodes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Serie__c</fullName>
        <label>Serie</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>001</fullName>
                </value>
                <value>
                    <fullName>008</fullName>
                </value>
                <value>
                    <fullName>018</fullName>
                </value>
                <value>
                    <fullName>020</fullName>
                </value>
                <value>
                    <fullName>022</fullName>
                </value>
                <value>
                    <fullName>026</fullName>
                </value>
                <value>
                    <fullName>027</fullName>
                </value>
                <value>
                    <fullName>033</fullName>
                </value>
                <value>
                    <fullName>034</fullName>
                </value>
                <value>
                    <fullName>035</fullName>
                </value>
                <value>
                    <fullName>036</fullName>
                </value>
                <value>
                    <fullName>038</fullName>
                </value>
                <value>
                    <fullName>045</fullName>
                </value>
                <value>
                    <fullName>049</fullName>
                </value>
                <value>
                    <fullName>051</fullName>
                </value>
                <value>
                    <fullName>052</fullName>
                </value>
                <value>
                    <fullName>053</fullName>
                </value>
                <value>
                    <fullName>054</fullName>
                </value>
                <value>
                    <fullName>056</fullName>
                </value>
                <value>
                    <fullName>075</fullName>
                </value>
                <value>
                    <fullName>077</fullName>
                </value>
                <value>
                    <fullName>108</fullName>
                </value>
                <value>
                    <fullName>110</fullName>
                </value>
                <value>
                    <fullName>112</fullName>
                </value>
                <value>
                    <fullName>122</fullName>
                </value>
                <value>
                    <fullName>128</fullName>
                </value>
                <value>
                    <fullName>129</fullName>
                </value>
                <value>
                    <fullName>131</fullName>
                </value>
                <value>
                    <fullName>134</fullName>
                </value>
                <value>
                    <fullName>135</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Subserie__c</fullName>
        <label>Subserie</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Subserie</valueSetName>
        </valueSet>
    </fields>
    <label>Autorización Oferta</label>
    <listViews>
        <fullName>All</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>NAME</columns>
        <columns>KS_Organizacion_Ventas__c</columns>
        <columns>KS_Pais__c</columns>
        <columns>KS_Familia__c</columns>
        <columns>KS_Serie__c</columns>
        <columns>KS_Subserie__c</columns>
        <columns>KS_Niv1_LimiteExtra__c</columns>
        <columns>KS_Niv2_LimiteExtra__c</columns>
        <columns>KS_Niv3_LimiteExtra__c</columns>
        <columns>KS_Niv4_LimiteExtra__c</columns>
        <columns>KS_Niv2_User__c</columns>
        <columns>KS_Niv3_User__c</columns>
        <columns>KS_Niv4_User__c</columns>
        <columns>KS_Niv4_User2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KS_Subserie__c</field>
            <operation>equals</operation>
            <value>I28</value>
        </filters>
        <filters>
            <field>KS_Subserie__c</field>
            <operation>equals</operation>
            <value>I29</value>
        </filters>
        <filters>
            <field>KS_Subserie__c</field>
            <operation>equals</operation>
            <value>I20</value>
        </filters>
        <label>Autorizaciones Serie-Subserie I28 y I29</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>Aprobador_Gelaberto</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
        <columns>NAME</columns>
        <columns>KS_Serie__c</columns>
        <columns>KS_Subserie__c</columns>
        <columns>KS_Niv2_User__c</columns>
        <columns>KS_Niv3_Categoria__c</columns>
        <columns>KS_Niv3_User__c</columns>
        <columns>KS_Niv4_User__c</columns>
        <columns>KS_Niv4_User2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KS_Niv4_User__c</field>
            <operation>contains</operation>
            <value>rui</value>
        </filters>
        <filters>
            <field>KS_Niv4_User2__c</field>
            <operation>contains</operation>
            <value>rui</value>
        </filters>
        <filters>
            <field>KS_Niv3_User__c</field>
            <operation>contains</operation>
            <value>rui</value>
        </filters>
        <filters>
            <field>KS_Niv2_User__c</field>
            <operation>contains</operation>
            <value>rui</value>
        </filters>
        <label>Aprobador Salcedo</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>Autorizaciones_MSC</fullName>
        <columns>KS_Organizacion_Ventas__c</columns>
        <columns>KS_Pais__c</columns>
        <columns>KS_Serie__c</columns>
        <columns>KS_Subserie__c</columns>
        <columns>KS_Niv1_LimiteMSC__c</columns>
        <columns>KS_Niv2_LimiteMSC__c</columns>
        <columns>KS_Niv3_LimiteMSC__c</columns>
        <columns>KS_Niv4_LimiteMSC__c</columns>
        <columns>KS_Niv2_User__c</columns>
        <columns>KS_Niv3_User__c</columns>
        <columns>KS_Niv4_User__c</columns>
        <columns>KS_Niv4_User2__c</columns>
        <filterScope>Everything</filterScope>
        <label>Autorizaciones MSC</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>Matriz_Espa_a_niveles_autorizacion</fullName>
        <columns>NAME</columns>
        <columns>KS_Pais__c</columns>
        <columns>KS_Organizacion_Ventas__c</columns>
        <columns>KS_Familia__c</columns>
        <columns>KS_Serie__c</columns>
        <columns>KS_Subserie__c</columns>
        <columns>KS_Niv1_LimiteExtra__c</columns>
        <columns>KS_Niv1_LimiteMSC__c</columns>
        <columns>KS_Niv2_LimiteExtra__c</columns>
        <columns>KS_Niv2_LimiteMSC__c</columns>
        <columns>KS_Niv3_LimiteExtra__c</columns>
        <columns>KS_Niv3_LimiteMSC__c</columns>
        <columns>KS_Niv4_LimiteExtra__c</columns>
        <columns>KS_Niv4_LimiteMSC__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KS_Pais__c</field>
            <operation>equals</operation>
            <value>ES</value>
        </filters>
        <label>Matriz España, niveles autorización</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>Matriz_Espa_a_responsables_autorizacion</fullName>
        <columns>NAME</columns>
        <columns>KS_Familia__c</columns>
        <columns>KS_Serie__c</columns>
        <columns>KS_Subserie__c</columns>
        <columns>KS_Niv3_Categoria__c</columns>
        <columns>KS_Niv3_User__c</columns>
        <columns>KS_Niv4_User__c</columns>
        <columns>KS_Niv4_User2__c</columns>
        <columns>KS_Niv1_User__c</columns>
        <columns>KS_Niv2_User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KS_Pais__c</field>
            <operation>equals</operation>
            <value>ES</value>
        </filters>
        <label>Matriz España, responsables autorización</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>Matriz_Portugal_niveles_autorizacion</fullName>
        <columns>NAME</columns>
        <columns>KS_Familia__c</columns>
        <columns>KS_Serie__c</columns>
        <columns>KS_Subserie__c</columns>
        <columns>KS_Niv1_LimiteExtra__c</columns>
        <columns>KS_Niv1_LimiteMSC__c</columns>
        <columns>KS_Niv2_LimiteExtra__c</columns>
        <columns>KS_Niv2_LimiteMSC__c</columns>
        <columns>KS_Niv3_LimiteExtra__c</columns>
        <columns>KS_Niv3_LimiteMSC__c</columns>
        <columns>KS_Niv4_LimiteExtra__c</columns>
        <columns>KS_Niv4_LimiteMSC__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KS_Pais__c</field>
            <operation>equals</operation>
            <value>PT</value>
        </filters>
        <label>Matriz Portugal, niveles autorización</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>Matriz_Portugal_responsables_autorizacion</fullName>
        <columns>NAME</columns>
        <columns>KS_Familia__c</columns>
        <columns>KS_Serie__c</columns>
        <columns>KS_Subserie__c</columns>
        <columns>KS_Niv1_User__c</columns>
        <columns>KS_Niv2_User__c</columns>
        <columns>KS_Niv3_Categoria__c</columns>
        <columns>KS_Niv3_User__c</columns>
        <columns>KS_Niv4_User__c</columns>
        <columns>KS_Niv4_User2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KS_Pais__c</field>
            <operation>equals</operation>
            <value>PT</value>
        </filters>
        <label>Matriz Portugal, responsables autorizaci</label>
        <language>es</language>
    </listViews>
    <nameField>
        <displayFormat>AO-{000000}</displayFormat>
        <label>Autorización Ofertas</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Autorizaciones Oferta</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>